<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/text_title"
                android:background="#3F000001"
                android:text="@string/app_title"
                android:textSize="20sp" />

            <TextView
                style="@style/text_title"
                android:background="#3F000001"
                android:text="@string/instructions_app"
                android:textSize="16sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/player_name"
                style="@style/textEditUserData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:hint="@string/type_your_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/player_surname"
                style="@style/textEditUserData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/player_age"
                style="@style/textEditUserData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_age"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textEditUserData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_gender"
                    android:textColor="@android:color/black" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="getPlayerPersonalData"
                android:text="@string/start_quiz" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:color/holo_red_dark"
                android:onClick="closeApp"
                android:text="@string/exit_quiz"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
